--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "typedoc": "typedoc --out typedoc --module commonjs --target es6 lib --readme none",
     "preversion": "npm run lintNoFix && npm test && npm run test:sim:build && npm run test:sim",
     "postversion": "npm run compile",
-    "version": "npm run config && npm run changelog && git add sample-xud.conf CHANGELOG.md && npm run typedoc && npm run slate"
+    "version": "npm run config && npm run changelog && git add sample-opendex.conf CHANGELOG.md && npm run typedoc && npm run slate"
   },
   "cross-os": {
     "clean": {
