--- a/sample-opendex.conf
+++ b/sample-opendex.conf
@@ -1,10 +1,10 @@
-# Sample configuration file for xud
+# Sample configuration file for opendex
 #
 # This sample file contains the default values for all configuration
-# options for xud. Directories and file path options are platform &
+# options for opendex. Directories and file path options are platform &
 # user specific and are not included, but are explained below.
 #
-# 'opendexdir' is the directory for data stored by xud including logs,
+# 'opendexdir' is the directory for data stored by opendex including logs,
 # keys, config and its database. Individual paths can be overridden
 # by settings such as 'logpath' and 'dbpath'.
 #
@@ -14,17 +14,17 @@
 # Default values:
 #
 # Linux
-# opendexdir = "/home/<user>/.xud"
+# opendexdir = "/home/<user>/.opendex"
 # certpath = "/home/<user>/.lnd/tls.cert"
 # macaroonpath = "/home/<user>/.lnd/data/chain/<currency>/<network>/admin.macaroon"
 #
 # Darwin (macOS)
-# opendexdir = "/Users/<user>/Library/Application Support/Xud"
+# opendexdir = "/Users/<user>/Library/Application Support/opendex"
 # certpath = "/Users/<user>/Library/Application Support/Lnd/tls.cert"
 # macaroonpath = "/Users/<user>/Library/Application Support/data/chain/<currency>/<network>/admin.macaroon"
 #
 # Windows
-# opendexdir = "C:\Users\<user>\AppData\Local\Xud"
+# opendexdir = "C:\Users\<user>\AppData\Local\opendex"
 # certpath = "C:\Users\<user>\AppData\Local\Lnd\tls.cert"
 # macaroonpath = "C:\Users\<user>\AppData\Local\Lnd\data\chain\<currency>\<network>\admin.macaroon"
 
