--- a/sample-opendex.conf
+++ b/sample-opendex.conf
@@ -1,10 +1,10 @@
-# Sample configuration file for opendex
+# Sample configuration file for opendexd
 #
 # This sample file contains the default values for all configuration
-# options for opendex. Directories and file path options are platform &
+# options for opendexd. Directories and file path options are platform &
 # user specific and are not included, but are explained below.
 #
-# 'opendexdir' is the directory for data stored by opendex including logs,
+# 'opendexdir' is the directory for data stored by opendexd including logs,
 # keys, config and its database. Individual paths can be overridden
 # by settings such as 'logpath' and 'dbpath'.
 #
@@ -14,17 +14,17 @@
 # Default values:
 #
 # Linux
-# opendexdir = "/home/<user>/.opendex"
+# opendexdir = "/home/<user>/.opendexd"
 # certpath = "/home/<user>/.lnd/tls.cert"
 # macaroonpath = "/home/<user>/.lnd/data/chain/<currency>/<network>/admin.macaroon"
 #
 # Darwin (macOS)
-# opendexdir = "/Users/<user>/Library/Application Support/opendex"
+# opendexdir = "/Users/<user>/Library/Application Support/opendexd"
 # certpath = "/Users/<user>/Library/Application Support/Lnd/tls.cert"
 # macaroonpath = "/Users/<user>/Library/Application Support/data/chain/<currency>/<network>/admin.macaroon"
 #
 # Windows
-# opendexdir = "C:\Users\<user>\AppData\Local\opendex"
+# opendexdir = "C:\Users\<user>\AppData\Local\opendexd"
 # certpath = "C:\Users\<user>\AppData\Local\Lnd\tls.cert"
 # macaroonpath = "C:\Users\<user>\AppData\Local\Lnd\data\chain\<currency>\<network>\admin.macaroon"
 
@@ -32,7 +32,7 @@ initdb = true
 instanceid = 0
 logdateformat = "DD/MM/YYYY HH:mm:ss.SSS"
 loglevel = "debug"
-network = "simnet"
+network = "testnet"
 nobalancechecks = false
 noencrypt = false
 nomatching = false
@@ -40,7 +40,7 @@ nosanityswaps = true
 strict = false
 
 [connext]
-disable = false
+disable = true
 host = "localhost"
 port = 5040
 webhookhost = "localhost"
@@ -48,7 +48,7 @@ webhookport = 8887
 
 [http]
 host = "localhost"
-port = 28887
+port = 18887
 
 [lnd.BTC]
 cltvdelta = 40
@@ -73,11 +73,11 @@ detectexternalip = false
 discover = true
 discoverminutes = 720
 listen = true
-port = 28885
+port = 18885
 tor = false
 torport = 0
 
 [rpc]
 disable = false
 host = "localhost"
-port = 28886
+port = 18886
